zu_parser.output
   0  $accept : file $end

   1  file : decls
   2       |

   3  decls : decl
   4        | decls decl

   5  decl : var ';'
   6       | funcdecl

   7  var : type id '!' '=' expr
   8      | type id '=' expr
   9      | type id '?' '=' expr
  10      | type id '!'
  11      | type id
  12      | type id '?'

  13  funcdecl : type id '(' vars ')'
  14           | type id '!' '(' vars ')'
  15           | type id '?' '(' vars ')'
  16           | type id '(' vars ')' '=' literal block
  17           | type id '!' '(' vars ')' '=' literal block
  18           | type id '?' '(' vars ')' '=' literal block
  19           | type id '(' vars ')' block
  20           | type id '!' '(' vars ')' block
  21           | type id '?' '(' vars ')' block

  22  funcall : id '(' exprs ')'

  23  type : '<' tINTEGER '>'
  24       | '<' '%' '>'
  25       | '<' '$' '>'
  26       | tINTEGER
  27       | '%'
  28       | '!'
  29       | tSTRING

  30  vars : var
  31       | vars ',' var
  32       |

  33  literal : tLINTEGER
  34          | tLREAL
  35          | litstring

  36  litstring : tLSTRING
  37            | litstring tLSTRING

  38  block : '{' decls instrs '}'
  39        | '{' instrs '}'
  40        | '{' '}'

  41  instrs : instr
  42         | instrs instr

  43  instr : expr ';'
  44        | expr '!'
  45        | expr tPRINT
  46        | tBREAK
  47        | tCONTINUE
  48        | tRETURN
  49        | cond
  50        | iter
  51        | block

  52  cond : '[' expr ']' '#' instr
  53       | '[' expr ']' '?' instr
  54       | '[' expr ']' '#' instr tELSE instr
  55       | '[' expr ']' '?' instr tELSE instr

  56  fordecls : fordecls ',' var
  57           | fordecls ',' expr
  58           | var
  59           | expr
  60           |

  61  iter : '[' fordecls ';' expr ';' expr ']' instr
  62       | '[' fordecls ';' expr ';' ']' instr

  63  exprs : expr
  64        | exprs ',' expr
  65        |

  66  expr : lval
  67       | literal
  68       | '-' expr
  69       | '+' expr
  70       | '~' expr
  71       | expr '+' expr
  72       | expr '|' expr
  73       | expr '&' expr
  74       | expr '-' expr
  75       | expr '*' expr
  76       | expr '/' expr
  77       | expr '%' expr
  78       | expr '<' expr
  79       | expr '>' expr
  80       | expr tGE expr
  81       | expr tLE expr
  82       | expr tNE expr
  83       | expr tEQ expr
  84       | '(' expr ')'
  85       | lval '=' expr
  86       | '[' expr ']'
  87       | expr '?'
  88       | funcall

  89  lval : id
  90       | lval '[' expr ']'
  91       | '(' expr ')' '[' expr ']'

  92  id : tIDENTIFIER

state 0
	$accept : . file $end  (0)
	file : .  (2)

	tSTRING  shift 1
	tINTEGER  shift 2
	'%'  shift 3
	'<'  shift 4
	'!'  shift 5
	$end  reduce 2

	file  goto 6
	var  goto 7
	decl  goto 8
	funcdecl  goto 9
	decls  goto 10
	type  goto 11


state 1
	type : tSTRING .  (29)

	.  reduce 29


state 2
	type : tINTEGER .  (26)

	.  reduce 26


state 3
	type : '%' .  (27)

	.  reduce 27


state 4
	type : '<' . tINTEGER '>'  (23)
	type : '<' . '%' '>'  (24)
	type : '<' . '$' '>'  (25)

	tINTEGER  shift 12
	'$'  shift 13
	'%'  shift 14
	.  error


state 5
	type : '!' .  (28)

	.  reduce 28


state 6
	$accept : file . $end  (0)

	$end  accept


state 7
	decl : var . ';'  (5)

	';'  shift 15
	.  error


state 8
	decls : decl .  (3)

	.  reduce 3


state 9
	decl : funcdecl .  (6)

	.  reduce 6


state 10
	file : decls .  (1)
	decls : decls . decl  (4)

	tSTRING  shift 1
	tINTEGER  shift 2
	'%'  shift 3
	'<'  shift 4
	'!'  shift 5
	$end  reduce 1

	var  goto 7
	decl  goto 16
	funcdecl  goto 9
	type  goto 11


state 11
	var : type . id '!' '=' expr  (7)
	var : type . id '=' expr  (8)
	var : type . id '?' '=' expr  (9)
	var : type . id '!'  (10)
	var : type . id  (11)
	var : type . id '?'  (12)
	funcdecl : type . id '(' vars ')'  (13)
	funcdecl : type . id '!' '(' vars ')'  (14)
	funcdecl : type . id '?' '(' vars ')'  (15)
	funcdecl : type . id '(' vars ')' '=' literal block  (16)
	funcdecl : type . id '!' '(' vars ')' '=' literal block  (17)
	funcdecl : type . id '?' '(' vars ')' '=' literal block  (18)
	funcdecl : type . id '(' vars ')' block  (19)
	funcdecl : type . id '!' '(' vars ')' block  (20)
	funcdecl : type . id '?' '(' vars ')' block  (21)

	tIDENTIFIER  shift 17
	.  error

	id  goto 18


state 12
	type : '<' tINTEGER . '>'  (23)

	'>'  shift 19
	.  error


state 13
	type : '<' '$' . '>'  (25)

	'>'  shift 20
	.  error


state 14
	type : '<' '%' . '>'  (24)

	'>'  shift 21
	.  error


state 15
	decl : var ';' .  (5)

	.  reduce 5


state 16
	decls : decls decl .  (4)

	.  reduce 4


state 17
	id : tIDENTIFIER .  (92)

	.  reduce 92


state 18
	var : type id . '!' '=' expr  (7)
	var : type id . '=' expr  (8)
	var : type id . '?' '=' expr  (9)
	var : type id . '!'  (10)
	var : type id .  (11)
	var : type id . '?'  (12)
	funcdecl : type id . '(' vars ')'  (13)
	funcdecl : type id . '!' '(' vars ')'  (14)
	funcdecl : type id . '?' '(' vars ')'  (15)
	funcdecl : type id . '(' vars ')' '=' literal block  (16)
	funcdecl : type id . '!' '(' vars ')' '=' literal block  (17)
	funcdecl : type id . '?' '(' vars ')' '=' literal block  (18)
	funcdecl : type id . '(' vars ')' block  (19)
	funcdecl : type id . '!' '(' vars ')' block  (20)
	funcdecl : type id . '?' '(' vars ')' block  (21)

	'('  shift 22
	'='  shift 23
	'?'  shift 24
	'!'  shift 25
	';'  reduce 11


state 19
	type : '<' tINTEGER '>' .  (23)

	.  reduce 23


state 20
	type : '<' '$' '>' .  (25)

	.  reduce 25


state 21
	type : '<' '%' '>' .  (24)

	.  reduce 24


state 22
	funcdecl : type id '(' . vars ')'  (13)
	funcdecl : type id '(' . vars ')' '=' literal block  (16)
	funcdecl : type id '(' . vars ')' block  (19)
	vars : .  (32)

	tSTRING  shift 1
	tINTEGER  shift 2
	'%'  shift 3
	'<'  shift 4
	'!'  shift 5
	')'  reduce 32
	','  reduce 32

	var  goto 26
	vars  goto 27
	type  goto 28


state 23
	var : type id '=' . expr  (8)

	tLINTEGER  shift 29
	tLREAL  shift 30
	tIDENTIFIER  shift 17
	tLSTRING  shift 31
	'~'  shift 32
	'['  shift 33
	'('  shift 34
	'+'  shift 35
	'-'  shift 36
	.  error

	litstring  goto 37
	literal  goto 38
	expr  goto 39
	funcall  goto 40
	id  goto 41
	lval  goto 42


state 24
	var : type id '?' . '=' expr  (9)
	var : type id '?' .  (12)
	funcdecl : type id '?' . '(' vars ')'  (15)
	funcdecl : type id '?' . '(' vars ')' '=' literal block  (18)
	funcdecl : type id '?' . '(' vars ')' block  (21)

	'('  shift 43
	'='  shift 44
	';'  reduce 12


state 25
	var : type id '!' . '=' expr  (7)
	var : type id '!' .  (10)
	funcdecl : type id '!' . '(' vars ')'  (14)
	funcdecl : type id '!' . '(' vars ')' '=' literal block  (17)
	funcdecl : type id '!' . '(' vars ')' block  (20)

	'('  shift 45
	'='  shift 46
	';'  reduce 10


state 26
	vars : var .  (30)

	.  reduce 30


state 27
	funcdecl : type id '(' vars . ')'  (13)
	funcdecl : type id '(' vars . ')' '=' literal block  (16)
	funcdecl : type id '(' vars . ')' block  (19)
	vars : vars . ',' var  (31)

	')'  shift 47
	','  shift 48
	.  error


state 28
	var : type . id '!' '=' expr  (7)
	var : type . id '=' expr  (8)
	var : type . id '?' '=' expr  (9)
	var : type . id '!'  (10)
	var : type . id  (11)
	var : type . id '?'  (12)

	tIDENTIFIER  shift 17
	.  error

	id  goto 49


state 29
	literal : tLINTEGER .  (33)

	.  reduce 33


state 30
	literal : tLREAL .  (34)

	.  reduce 34


state 31
	litstring : tLSTRING .  (36)

	.  reduce 36


state 32
	expr : '~' . expr  (70)

	tLINTEGER  shift 29
	tLREAL  shift 30
	tIDENTIFIER  shift 17
	tLSTRING  shift 31
	'~'  shift 32
	'['  shift 33
	'('  shift 34
	'+'  shift 35
	'-'  shift 36
	.  error

	litstring  goto 37
	literal  goto 38
	expr  goto 50
	funcall  goto 40
	id  goto 41
	lval  goto 42


state 33
	expr : '[' . expr ']'  (86)

	tLINTEGER  shift 29
	tLREAL  shift 30
	tIDENTIFIER  shift 17
	tLSTRING  shift 31
	'~'  shift 32
	'['  shift 33
	'('  shift 34
	'+'  shift 35
	'-'  shift 36
	.  error

	litstring  goto 37
	literal  goto 38
	expr  goto 51
	funcall  goto 40
	id  goto 41
	lval  goto 42


state 34
	expr : '(' . expr ')'  (84)
	lval : '(' . expr ')' '[' expr ']'  (91)

	tLINTEGER  shift 29
	tLREAL  shift 30
	tIDENTIFIER  shift 17
	tLSTRING  shift 31
	'~'  shift 32
	'['  shift 33
	'('  shift 34
	'+'  shift 35
	'-'  shift 36
	.  error

	litstring  goto 37
	literal  goto 38
	expr  goto 52
	funcall  goto 40
	id  goto 41
	lval  goto 42


state 35
	expr : '+' . expr  (69)

	tLINTEGER  shift 29
	tLREAL  shift 30
	tIDENTIFIER  shift 17
	tLSTRING  shift 31
	'~'  shift 32
	'['  shift 33
	'('  shift 34
	'+'  shift 35
	'-'  shift 36
	.  error

	litstring  goto 37
	literal  goto 38
	expr  goto 53
	funcall  goto 40
	id  goto 41
	lval  goto 42


state 36
	expr : '-' . expr  (68)

	tLINTEGER  shift 29
	tLREAL  shift 30
	tIDENTIFIER  shift 17
	tLSTRING  shift 31
	'~'  shift 32
	'['  shift 33
	'('  shift 34
	'+'  shift 35
	'-'  shift 36
	.  error

	litstring  goto 37
	literal  goto 38
	expr  goto 54
	funcall  goto 40
	id  goto 41
	lval  goto 42


state 37
	literal : litstring .  (35)
	litstring : litstring . tLSTRING  (37)

	tLSTRING  shift 55
	tPRINT  reduce 35
	']'  reduce 35
	')'  reduce 35
	'{'  reduce 35
	'?'  reduce 35
	'&'  reduce 35
	'|'  reduce 35
	'%'  reduce 35
	tEQ  reduce 35
	tNE  reduce 35
	tGE  reduce 35
	tLE  reduce 35
	'>'  reduce 35
	'<'  reduce 35
	'+'  reduce 35
	'-'  reduce 35
	'*'  reduce 35
	'/'  reduce 35
	';'  reduce 35
	'!'  reduce 35
	','  reduce 35


state 38
	expr : literal .  (67)

	.  reduce 67


state 39
	var : type id '=' expr .  (8)
	expr : expr . '+' expr  (71)
	expr : expr . '|' expr  (72)
	expr : expr . '&' expr  (73)
	expr : expr . '-' expr  (74)
	expr : expr . '*' expr  (75)
	expr : expr . '/' expr  (76)
	expr : expr . '%' expr  (77)
	expr : expr . '<' expr  (78)
	expr : expr . '>' expr  (79)
	expr : expr . tGE expr  (80)
	expr : expr . tLE expr  (81)
	expr : expr . tNE expr  (82)
	expr : expr . tEQ expr  (83)
	expr : expr . '?'  (87)

	'?'  shift 56
	'&'  shift 57
	'|'  shift 58
	'%'  shift 59
	tEQ  shift 60
	tNE  shift 61
	tGE  shift 62
	tLE  shift 63
	'>'  shift 64
	'<'  shift 65
	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	')'  reduce 8
	';'  reduce 8
	','  reduce 8


state 40
	expr : funcall .  (88)

	.  reduce 88


state 41
	funcall : id . '(' exprs ')'  (22)
	lval : id .  (89)

	'('  shift 70
	tPRINT  reduce 89
	'['  reduce 89
	']'  reduce 89
	')'  reduce 89
	'='  reduce 89
	'?'  reduce 89
	'&'  reduce 89
	'|'  reduce 89
	'%'  reduce 89
	tEQ  reduce 89
	tNE  reduce 89
	tGE  reduce 89
	tLE  reduce 89
	'>'  reduce 89
	'<'  reduce 89
	'+'  reduce 89
	'-'  reduce 89
	'*'  reduce 89
	'/'  reduce 89
	';'  reduce 89
	'!'  reduce 89
	','  reduce 89


state 42
	expr : lval .  (66)
	expr : lval . '=' expr  (85)
	lval : lval . '[' expr ']'  (90)

	'['  shift 71
	'='  shift 72
	tPRINT  reduce 66
	']'  reduce 66
	')'  reduce 66
	'?'  reduce 66
	'&'  reduce 66
	'|'  reduce 66
	'%'  reduce 66
	tEQ  reduce 66
	tNE  reduce 66
	tGE  reduce 66
	tLE  reduce 66
	'>'  reduce 66
	'<'  reduce 66
	'+'  reduce 66
	'-'  reduce 66
	'*'  reduce 66
	'/'  reduce 66
	';'  reduce 66
	'!'  reduce 66
	','  reduce 66


state 43
	funcdecl : type id '?' '(' . vars ')'  (15)
	funcdecl : type id '?' '(' . vars ')' '=' literal block  (18)
	funcdecl : type id '?' '(' . vars ')' block  (21)
	vars : .  (32)

	tSTRING  shift 1
	tINTEGER  shift 2
	'%'  shift 3
	'<'  shift 4
	'!'  shift 5
	')'  reduce 32
	','  reduce 32

	var  goto 26
	vars  goto 73
	type  goto 28


state 44
	var : type id '?' '=' . expr  (9)

	tLINTEGER  shift 29
	tLREAL  shift 30
	tIDENTIFIER  shift 17
	tLSTRING  shift 31
	'~'  shift 32
	'['  shift 33
	'('  shift 34
	'+'  shift 35
	'-'  shift 36
	.  error

	litstring  goto 37
	literal  goto 38
	expr  goto 74
	funcall  goto 40
	id  goto 41
	lval  goto 42


state 45
	funcdecl : type id '!' '(' . vars ')'  (14)
	funcdecl : type id '!' '(' . vars ')' '=' literal block  (17)
	funcdecl : type id '!' '(' . vars ')' block  (20)
	vars : .  (32)

	tSTRING  shift 1
	tINTEGER  shift 2
	'%'  shift 3
	'<'  shift 4
	'!'  shift 5
	')'  reduce 32
	','  reduce 32

	var  goto 26
	vars  goto 75
	type  goto 28


state 46
	var : type id '!' '=' . expr  (7)

	tLINTEGER  shift 29
	tLREAL  shift 30
	tIDENTIFIER  shift 17
	tLSTRING  shift 31
	'~'  shift 32
	'['  shift 33
	'('  shift 34
	'+'  shift 35
	'-'  shift 36
	.  error

	litstring  goto 37
	literal  goto 38
	expr  goto 76
	funcall  goto 40
	id  goto 41
	lval  goto 42


state 47
	funcdecl : type id '(' vars ')' .  (13)
	funcdecl : type id '(' vars ')' . '=' literal block  (16)
	funcdecl : type id '(' vars ')' . block  (19)

	'='  shift 77
	'{'  shift 78
	$end  reduce 13
	tLINTEGER  reduce 13
	tLREAL  reduce 13
	tIDENTIFIER  reduce 13
	tLSTRING  reduce 13
	tBREAK  reduce 13
	tCONTINUE  reduce 13
	tRETURN  reduce 13
	tSTRING  reduce 13
	tINTEGER  reduce 13
	'~'  reduce 13
	'['  reduce 13
	'('  reduce 13
	'%'  reduce 13
	'<'  reduce 13
	'+'  reduce 13
	'-'  reduce 13
	'!'  reduce 13

	block  goto 79


state 48
	vars : vars ',' . var  (31)

	tSTRING  shift 1
	tINTEGER  shift 2
	'%'  shift 3
	'<'  shift 4
	'!'  shift 5
	.  error

	var  goto 80
	type  goto 28


state 49
	var : type id . '!' '=' expr  (7)
	var : type id . '=' expr  (8)
	var : type id . '?' '=' expr  (9)
	var : type id . '!'  (10)
	var : type id .  (11)
	var : type id . '?'  (12)

	'='  shift 23
	'?'  shift 81
	'!'  shift 82
	')'  reduce 11
	';'  reduce 11
	','  reduce 11


state 50
	expr : '~' expr .  (70)
	expr : expr . '+' expr  (71)
	expr : expr . '|' expr  (72)
	expr : expr . '&' expr  (73)
	expr : expr . '-' expr  (74)
	expr : expr . '*' expr  (75)
	expr : expr . '/' expr  (76)
	expr : expr . '%' expr  (77)
	expr : expr . '<' expr  (78)
	expr : expr . '>' expr  (79)
	expr : expr . tGE expr  (80)
	expr : expr . tLE expr  (81)
	expr : expr . tNE expr  (82)
	expr : expr . tEQ expr  (83)
	expr : expr . '?'  (87)

	'?'  shift 56
	'&'  shift 57
	'|'  shift 58
	'%'  shift 59
	tEQ  shift 60
	tNE  shift 61
	tGE  shift 62
	tLE  shift 63
	'>'  shift 64
	'<'  shift 65
	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	tPRINT  reduce 70
	']'  reduce 70
	')'  reduce 70
	';'  reduce 70
	'!'  reduce 70
	','  reduce 70


state 51
	expr : expr . '+' expr  (71)
	expr : expr . '|' expr  (72)
	expr : expr . '&' expr  (73)
	expr : expr . '-' expr  (74)
	expr : expr . '*' expr  (75)
	expr : expr . '/' expr  (76)
	expr : expr . '%' expr  (77)
	expr : expr . '<' expr  (78)
	expr : expr . '>' expr  (79)
	expr : expr . tGE expr  (80)
	expr : expr . tLE expr  (81)
	expr : expr . tNE expr  (82)
	expr : expr . tEQ expr  (83)
	expr : '[' expr . ']'  (86)
	expr : expr . '?'  (87)

	']'  shift 83
	'?'  shift 56
	'&'  shift 57
	'|'  shift 58
	'%'  shift 59
	tEQ  shift 60
	tNE  shift 61
	tGE  shift 62
	tLE  shift 63
	'>'  shift 64
	'<'  shift 65
	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	.  error


state 52
	expr : expr . '+' expr  (71)
	expr : expr . '|' expr  (72)
	expr : expr . '&' expr  (73)
	expr : expr . '-' expr  (74)
	expr : expr . '*' expr  (75)
	expr : expr . '/' expr  (76)
	expr : expr . '%' expr  (77)
	expr : expr . '<' expr  (78)
	expr : expr . '>' expr  (79)
	expr : expr . tGE expr  (80)
	expr : expr . tLE expr  (81)
	expr : expr . tNE expr  (82)
	expr : expr . tEQ expr  (83)
	expr : '(' expr . ')'  (84)
	expr : expr . '?'  (87)
	lval : '(' expr . ')' '[' expr ']'  (91)

	')'  shift 84
	'?'  shift 56
	'&'  shift 57
	'|'  shift 58
	'%'  shift 59
	tEQ  shift 60
	tNE  shift 61
	tGE  shift 62
	tLE  shift 63
	'>'  shift 64
	'<'  shift 65
	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	.  error


state 53
	expr : '+' expr .  (69)
	expr : expr . '+' expr  (71)
	expr : expr . '|' expr  (72)
	expr : expr . '&' expr  (73)
	expr : expr . '-' expr  (74)
	expr : expr . '*' expr  (75)
	expr : expr . '/' expr  (76)
	expr : expr . '%' expr  (77)
	expr : expr . '<' expr  (78)
	expr : expr . '>' expr  (79)
	expr : expr . tGE expr  (80)
	expr : expr . tLE expr  (81)
	expr : expr . tNE expr  (82)
	expr : expr . tEQ expr  (83)
	expr : expr . '?'  (87)

	'?'  shift 56
	'&'  shift 57
	'|'  shift 58
	'%'  shift 59
	tEQ  shift 60
	tNE  shift 61
	tGE  shift 62
	tLE  shift 63
	'>'  shift 64
	'<'  shift 65
	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	tPRINT  reduce 69
	']'  reduce 69
	')'  reduce 69
	';'  reduce 69
	'!'  reduce 69
	','  reduce 69


state 54
	expr : '-' expr .  (68)
	expr : expr . '+' expr  (71)
	expr : expr . '|' expr  (72)
	expr : expr . '&' expr  (73)
	expr : expr . '-' expr  (74)
	expr : expr . '*' expr  (75)
	expr : expr . '/' expr  (76)
	expr : expr . '%' expr  (77)
	expr : expr . '<' expr  (78)
	expr : expr . '>' expr  (79)
	expr : expr . tGE expr  (80)
	expr : expr . tLE expr  (81)
	expr : expr . tNE expr  (82)
	expr : expr . tEQ expr  (83)
	expr : expr . '?'  (87)

	'?'  shift 56
	'&'  shift 57
	'|'  shift 58
	'%'  shift 59
	tEQ  shift 60
	tNE  shift 61
	tGE  shift 62
	tLE  shift 63
	'>'  shift 64
	'<'  shift 65
	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	tPRINT  reduce 68
	']'  reduce 68
	')'  reduce 68
	';'  reduce 68
	'!'  reduce 68
	','  reduce 68


state 55
	litstring : litstring tLSTRING .  (37)

	.  reduce 37


state 56
	expr : expr '?' .  (87)

	.  reduce 87


state 57
	expr : expr '&' . expr  (73)

	tLINTEGER  shift 29
	tLREAL  shift 30
	tIDENTIFIER  shift 17
	tLSTRING  shift 31
	'~'  shift 32
	'['  shift 33
	'('  shift 34
	'+'  shift 35
	'-'  shift 36
	.  error

	litstring  goto 37
	literal  goto 38
	expr  goto 85
	funcall  goto 40
	id  goto 41
	lval  goto 42


state 58
	expr : expr '|' . expr  (72)

	tLINTEGER  shift 29
	tLREAL  shift 30
	tIDENTIFIER  shift 17
	tLSTRING  shift 31
	'~'  shift 32
	'['  shift 33
	'('  shift 34
	'+'  shift 35
	'-'  shift 36
	.  error
